bin/docker/k8s/aks/countly-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: countly-ingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  tls:
  - hosts:
    - <required domain name>                     # example.count.ly
    secretName: countly-tls
  rules:
  - host: <required domain name>                 # example.count.ly
    http:
      paths:
      - path: /i
        pathType: ImplementationSpecific
        backend:
          service:
            name: countly-api
            port:
              number: 3001
      - path: /i/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: countly-api
            port:
              number: 3001
      - path: /o
        pathType: ImplementationSpecific
        backend:
          service:
            name: countly-api
            port:
              number: 3001
      - path: /o/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: countly-api
            port:
              number: 3001
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: countly-frontend
            port:
              number: 6001
